[project]
name = "power01_div"
version = "0.1.2"
description = "Default template for PDM package"
authors = [
    {name = "sooj1n", email = "sujin19371@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
div = 'power01_div.div:div'

[tool.pdm]
distribution = true
